syntax = "proto3";

package leads;

option go_package = "./pb";

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

// Product Service Definition
service ProductService {
  // Product operations
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (google.protobuf.Empty);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  
  // Lead operations
  rpc CreateLead(CreateLeadRequest) returns (LeadResponse);
  rpc GetLead(GetLeadRequest) returns (LeadResponse);
  rpc UpdateLead(UpdateLeadRequest) returns (LeadResponse);
  rpc DeleteLead(DeleteLeadRequest) returns (google.protobuf.Empty);
  rpc ListLeads(ListLeadsRequest) returns (ListLeadsResponse);
}

// Product Messages
message CreateProductRequest {
  string name = 1;
  string description = 2;
  google.protobuf.Struct schema = 3;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Struct schema = 4;
  string created_at = 5;
  string updated_at = 6;
}

message GetProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Struct schema = 4;
}

message DeleteProductRequest {
  string id = 1;
}

message ListProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
  int32 total = 2;
}

// Lead Messages
message LeadObject {
  string product_id = 1;
  google.protobuf.Struct data = 2;
}

message CreateLeadRequest {
  string phone_number = 1; // required at HTTP level
  string product_id = 2;
  google.protobuf.Struct data = 3;
}

message LeadResponse {
  string id = 1;
  string phone_number = 2;
  repeated LeadObject objects = 3;
  string created_at = 4;
  string updated_at = 5;
}

message GetLeadRequest {
  string id = 1;
}

message UpdateLeadRequest {
  string id = 1;
  repeated LeadObject objects = 2;
}

message DeleteLeadRequest {
  string id = 1;
}

message ListLeadsRequest {
  // filter leads that contain at least one object with this product_id
  string product_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ListLeadsResponse {
  repeated LeadResponse leads = 1;
  int32 total = 2;
}